--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
-    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-manage-wallpaper": "^1.1.2",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
